[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-proxy = "0.1.0"
structopt = "0.3.26"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.82"
serde_toml = "0.0.1"
toml = "0.8.12"
serde_json = "1.0.115"
pingora-error = "0.1.0"

# for adding metrics 
prometheus = { version = "0.13.3", optional = true }

[features]
metrics = ["dep:prometheus"]
