[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.79"
pingora-core = { version = "0.1.1", git = "https://github.com/cloudflare/pingora", tag = "0.1.1" }
pingora-http = { version = "0.1.1", git = "https://github.com/cloudflare/pingora", tag = "0.1.1" }
pingora-proxy = { version = "0.1.1", git = "https://github.com/cloudflare/pingora", tag = "0.1.1" }
pingora-error = { version = "0.1.1", git = "https://github.com/cloudflare/pingora", tag = "0.1.1" }
structopt = "0.3.26"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.82"
serde_toml = "0.0.1"
toml = "0.8.12"
serde_json = "1.0.115"

# for adding metrics 
prometheus = { version = "0.13.3", optional = true }
bytes = "1.6.0"
tokenizers = { version = "0.15.2", features = ["http"] }

[features]
metrics = ["dep:prometheus"]
